<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChartConfig">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewIPConfig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Chart_config"
            android:textSize="24sp" />

        <Switch
            android:id="@+id/TemperatureSW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="true"
            android:padding="@dimen/Chart_settings_padding"
            android:text="@string/temperatureText"
            android:textOff="OFF"
            android:textSize="@dimen/Chart_settings_font_size"/>

        <Switch
            android:id="@+id/PressureSW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="true"
            android:padding="@dimen/Chart_settings_padding"
            android:text="@string/pressureText"
            android:textSize="@dimen/Chart_settings_font_size"/>

        <Switch
            android:id="@+id/HumiditySW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/Chart_settings_padding"
            android:layout_gravity="center"
            android:checked="true"
            android:text="@string/humidityText"
            android:textSize="@dimen/Chart_settings_font_size" />

        <TextView
            android:id="@+id/textViewSampleTimeConfig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="25sp"
            android:text="Sample time (ms)"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/sampleTimeEditTextConfig"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:text="500" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>